<resources>
    <string-array name="ip_array">
        <item>172.29.44.116</item>
        <item>192.168.1.16</item>
    </string-array>

    <string name="app_name">Pog Box</string>
    <string name="crontab">Crontab</string>
    <string name="cpu_temp">CPU Temp</string>
    <string name="dht_ambient">DHT (Ambient)</string>
    <string name="placeholder">N/A</string>
    <string name="harmonogram_n_wiat_a">Harmonogram Światła</string>
    <string name="server_memory">Server space</string>
    <string name="database_size">Database Size</string>
    <string name="dht_growbox">DHT (Growbox)</string>
    <string name="uruchom_o_godzinie">Uruchom o godzinie:</string>
    <string name="zapisz">Zapisz</string>
    <string name="debug_info">Debug info</string>
    <string name="wy_cz_o_godzinie">Wyłącz o godzinie:</string>
    <string name="dst">DST</string>
    <string name="wykres_ostatnich_10_godzin">Wykres ostatnich 10 godzin</string>
    <string name="statystyki">Statystyki</string>
    <string name="rednia_temp_dzi">Średnia temp. dziś</string>
    <string name="rednia_wilg_dzi">Średnia wilg. dziś</string>
    <string name="urz_dzenia">Urządzenia</string>
    <string name="nazwa_urz_dzenia">Nazwa urządzenia</string>
    <string name="dodatkowe">Dodatkowe</string>
    <string name="from">Od</string>
    <string name="zasilanie">Zasilanie</string>
    <string name="untill">Do</string>
    <string name="name_placeholder">Name</string>
    <string name="odczyt_temp">Odczyt temp.</string>
    <string name="wykresy">Wykresy</string>
    <string name="save_button">Save Button</string>
    <string name="odczyt_wilg">Odczyt wilg.</string>
    <string name="ostatnie_10_godzin">Ostatnie 10 godzin</string>
    <string name="sensor_ideogram">Sensor ideogram</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="rozmieszczenie_element_w_w_growbox_sie">Zobacz rozmieszczenie elementów w growbox\'sie</string>
    <string name="growbox">Growbox</string>
    <string name="model">Model</string>
    <string name="server_port">Server port</string>
</resources>